@@ -153,7 +153,7 @@ init|=
 operator|(
 name|byte
 operator|)
-literal|1
+literal|2
 decl_stmt|;
 specifier|private
 name|byte
@@ -1126,6 +1126,23 @@ name|set
 argument_list|)
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|version
+operator|>
+literal|1
+condition|)
+block|{
+name|this
+operator|.
+name|writeToWAL
+operator|=
+name|in
+operator|.
+name|readBoolean
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 specifier|public
 name|void
@@ -1329,6 +1346,13 @@ expr_stmt|;
 block|}
 block|}
 block|}
+name|out
+operator|.
+name|writeBoolean
+argument_list|(
+name|writeToWAL
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 end_class
